# littleci

./: .env  Cargo.toml  Cross.toml  LICENSE-APACHE.md  LICENSE-MIT.md  LICENSE-PARITY.md  LICENSE.md  README.md  build.sh
migrations/2019-08-09-190757_create_queue/: down.sql  up.sql
scripts/: build.sh
src/: main.rs
src/config/: mod.rs
src/model/: mod.rs  queues.rs  repositories.rs  schema.rs  users.rs
src/queue/: job.rs  mod.rs
src/server/: auth.rs  cors.rs  git.rs  gitea.rs  github.rs  mod.rs  response.rs  static_assets.rs
src/util/: mod.rs
static/: openapi.yaml
swagger/: index.html  index.js  package-lock.json  package.json
ui/: package-lock.json  package.json  tsconfig.json  tslint.json  vue.config.js
ui/public/: index.html
ui/src/: App.vue  main.ts  router.ts
ui/src/components/: HelloWorld.vue  Login.vue
ui/src/plugins/: vuetify.ts
ui/src/store/: state.ts
ui/src/views/: Config.vue  Dashboard.vue  Home.vue  JobOutput.vue  ManageRepositories.vue  NewRepository.vue  NewUser.vue  Repository.vue  UpdateRepository.vue  UserProfile.vue  Users.vue
