[package]
name = "littleci"
version = "0.1.0"
authors = ["Tyrone Tudehope <tyronetudehope@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
nanoid = "0.2"
log = "0.4"
chrono = "0.4"
base64 = "0.10"
rust-crypto = "0.2"
secstr = "0.3"
directories = "2.0"
clap = "2.33"
config = "0.9"
toml = "0.5"
regex = "1.2"
failure = "0.1"
diesel = { version = "1.0.0", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = ">=0.8.0, <0.13.0", optional = true, features = ["bundled"] }
reqwest = "0.9.20"
rust-embed = "5.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
syslog = "4.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "serve"]

[dependencies.fern]
version = "0.5.8"
features = ["colored", "syslog-4"]
