[package]
name = "littleci"
version = "0.1.0"
authors = ["Tyrone Tudehope"]
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_cors = "0.5.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
nanoid = "0.2"
log = "0.4"
chrono = "0.4"
base64 = "0.10"
blake2 = "0.8"
secstr = "0.3"
clap = "2.33"
config = "0.9"
toml = "0.5"
regex = "1.2"
failure = "0.1"
diesel = { version = "1.0", features = ["sqlite", "chrono", "r2d2"] }
libsqlite3-sys = { version = ">=0.8, <0.13", optional = true, features = ["bundled"] }
reqwest = "0.9"
rust-embed = "5.1"
jsonwebtoken = "5.0"
sha-1 = "0.8"
hmac = "0.7.1"
sha3 = "0.8"
rpassword = "4.0"
hex = "0.4.0"
rust-argon2 = "0.5.1"
parking_lot = "0.10.0"
ctrlc = "3.1.3"

[target.'cfg(target_os = "linux")'.dependencies]
syslog = "4.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]

[dependencies.fern]
version = "0.5"
features = ["colored", "syslog-4"]
